add user cart area
